@@ -64,19 +64,27 @@ EBUILD glibc-2.18-r1.ebuild 7021 SHA256 308a57802e31f6ec4a2ab6be491bcf679707a6a7
 EBUILD glibc-2.19-r1.ebuild 6903 SHA256 95acb9caf384d01a5c89af7242c72f40c5c2a8c219683c4096f65dd59e34668f SHA512 14a33b61b20acb6993b07b4842c76f3602e9d0ae2f07a44e0501831080c3730373aa5f02c96f328c47fde89e60839ec85f4dd98c4f6b515eacf03d1ab0795df8 WHIRLPOOL 1b3883b5a2641687fd46df89e140e0e332da0933fc60426906c6afaa9d825d6fdc2fea0de1a95c7a74736e96adb346c660aaf5ef0597e2c5324e716cf86873b0
 EBUILD glibc-2.19.ebuild 6912 SHA256 3a11e60bed77cc2dad678ad97ed7a959a59a91a94ca28fd4d7d8776a6217a00f SHA512 70c9b91f224c276783b96ae60f57ac48886861fda71be6e6e292840b4c8cc0fea798005c26c6c33f198c63fb2c38bf78e994821dfa010086ba7ece443257b851 WHIRLPOOL 98be39cc52c7d8431e46f24f9552db63980f4a38c8e12aaffd4b08c7c66f8931a16fd7deb99e43a5bb330a42e6c1e722a9a8f74d1fe97523d7b4bfe75c9accf5
 EBUILD glibc-2.20-r1.ebuild 6213 SHA256 ffa484fac7185758cd114c91804460e26ae3da5148b98e106a04481c2d081d8e SHA512 f6899f6a946259e03e39ba12b7522a883f66bbd294029716ba3858340a4ed68be7dbbd506cde3e5a27fa1fe5ebc0215deb6f7059e95384ac869c77820e329962 WHIRLPOOL 66b1d94a2dbad951153ec17ac8510b7dd6939955af0467acae3721c44f2e2704d8f02508aafa25ad64f3cfe8971d46d674fd4c89bf1d76e7da31a6c1b2949308
-EBUILD glibc-2.20-r2.ebuild 6208 SHA256 e7227cc8d113edcf476643820fc1b211c908557c7023ad2ef4b3a6511424002b SHA512 cf0effafdba3d3dbe8b971b5b57c6b8550d7d9937d373bab1318c116217ef12f29b44c9ddaf5598ac7ff0dd3be61513143a2fa6918ac2aa09d14ebddb623c7d7 WHIRLPOOL 753d1633ac2d7d9f3637fa3781d3968a350675682a1a825a5d4afa9af05771b34f463dd82a6919a3e9c4f060934662f21f0a477dc7fea2980f2fbcd79acac7b1
+EBUILD glibc-2.20-r2.ebuild 6463 SHA256 9a95c3b1e4452789c772187920e020c03ed30cd815158d8b6013886d0fb8bbd5 SHA512 0129add6065746843cccc96be33c57442f12136d62c31a648fdd25415e870cacf9b442b07d40fc36745417c39cfd511736fb7ac312438df4e8c32e71ffcbb349 WHIRLPOOL dec7f68e5255577aca1bc3162c81e05e136a7685af964d675a39742d59edcf5c174931341f9343f0a2faddb7dd408b939ccc80028f74dcd0ad193888ac51afe8
 EBUILD glibc-2.20.ebuild 6159 SHA256 60cd13aa057dedf49026f440b2d0f46ae36374689d2085a7209dfb991939e0e5 SHA512 f9f64226f1d42c7db42b0c221e53e58cf22df6768f3a4e64367d8537ed232cf3566848c6210dd77a287edca05e2d952a5953ec750dc97a3c878847f06c5c0f56 WHIRLPOOL dadc71db6048b4ba75bf63e1e825f5f8ebc45f64947d9463e2a867ec5323a6c8e6d34d269c4632aa54d31cf743e63ecd6484eaa00271128c44da19dc1b809310
-EBUILD glibc-2.21.ebuild 6187 SHA256 e5b14a7c4ed36ffbe700f90738c01626a556eb47a0ec53e87c99194656ff191d SHA512 eda58f7925d00c364e0c9b1a808c1f9e0ca257c8e16f502475876cec22058fdabf6875a112a197ee3e472ecef049145b0d0be1b76ff6c9f94760b429a1e8941d WHIRLPOOL 7841240c4ccee77a75cb226a04ac7d7dcbdf25a84b4e7634032e2a13940bf58204aae385038c539f4f3ac088f7c2e03ab17237e21d807449fa27748f37f76dfd
+EBUILD glibc-2.21.ebuild 6443 SHA256 c24c04017479409be2a51781fc720a8c4c47ddba9acf2d1bb1a13a2250cf4522 SHA512 8d8842130557020826a592f1f95b6a58f2a74d174156682ba36d778fa1fad40348c9c6bc8c74862f7dd225d473534fdc375c915ceac68171c129cbe4f05ddebf WHIRLPOOL 2351f26a3ceadc0f6d4a28e74f2e8956bee3fb95c6dbbe43cd8252e7277edeea29b6e7f25442759e4ab6d78ed6cba9808d328a18293c2b291d9b35a771e5b62e
 EBUILD glibc-9999.ebuild 6190 SHA256 5a3f6bf5cb702fd221f75224b8223b9c0250be7baa81ca891add96eda104fca5 SHA512 84120f37f2b9e899582ecdb1d1ffb7e23f383b95e5989398880dda90e276bb2025d338433323a4558a188cf61e499ba5842c06c8bbb8f09f0c4fc07651e7509b WHIRLPOOL 2cc9f0b237c6dd31c7fd9b601ce0e00fc305979a48e197919040a2750168dc00b89eeb69d3e18ace53613e086a3e6779d85adc45c293ba3dffa98d4c389f362d
-MISC ChangeLog 75335 SHA256 6151c0f3ed3ece54ec5b9bbcbf52969fbd87c4d8b7053de25b69b70e2f5bfe52 SHA512 9cbc1e48affb6d405d765222068d27d59a2d8a7da958d3fb13f1f7b862ffbce2940c600e85252727ae4a8bb93f18e24aecddad265c789d49d37b3eef29cd0239 WHIRLPOOL 1a8e39ca97ba5f25f54ceb70135916208ba287720612427fcf0454343c0f0b6b4d873344851df8120d8faa07823f589d37695052d845dc2e0b7c88130acb3c77
+MISC ChangeLog 75521 SHA256 fb24817cc0d96b9fd9054b50167ca71f65e3ca02d9419f93fada14044fa225d1 SHA512 c54deeae5c43ed54085c1ba4676c31d14c0ac45fe82d9e878bd7e11dea424e57148b96d4258f931735c1e32b8d2865f8fae2255d5135fa3c7f28c9f9ad1cba47 WHIRLPOOL a0bfbd5205c8b290a3dffe61ca75ee9d23d24b78eb9feef086c292417ba0df8af36390edfcc22242cb9eeb6fc0438d48dfa5ae0ff0a120dfe8e90137a4a13f38
 MISC ChangeLog-2007 108548 SHA256 d622be202eb0d61a363b0ae4065012cd1d494fefaa0c03d4aa7986177cdde6d0 SHA512 fdb3f311a3be4b97a6acfceb1763af5ea69e74d8195522c5d03307f75e15a9382991e9e29dbfdec79e74f1c36328f82648768749bc929e5050ff64b628c7ca98 WHIRLPOOL e550f354394569069e000a7e70ec69c94388a0f415c19b427203f0dcbcbeeec0f5e379ee2af7886cd2d68559e749fab8122e7e077985729d7e0e728ae9096d7a
 MISC metadata.xml 724 SHA256 b9d8df62b36ae314b29a3177c534495036ef97a819c152247383e907004fe4dc SHA512 8c215338bbf47de95f40f9f24c50d107ec0bbe4a47282d3cbc253d4003db85a88c542aee33756dd9d2d2ec4c70992009261d821a8c145c24c24d2ad448595b77 WHIRLPOOL 954f5d080c7219ffe85e128eddd05c74a32a457219d423441bb58d54a7de1786da6a2efb541861b3bfc93a9acf2ae6f79168d1ccc37385f84af0eb439fff2954
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iJwEAQEIAAYFAlU6opQACgkQG9wOWsQutdYUFQQAvaqLGjuoqSHHWV+YyfH7dE0A
-0jAq08YxuvDeuWsiRhBNNT+TNEZ+sT/+Tg9gvIFXLZuF3EE+M7uNOu5m6TKfkgWG
-v3GNg8lInBZT2evD3b1KxEO//V6e9/SbTFVmGK5nZhQtSOvyyG4vKybzBSEoyN96
-T44ewHalYHaH9NpwHC8=
-=YvJg
+iQIcBAEBCAAGBQJVPbCRAAoJEPGu1DbS6WIAG5wP/io22U0pwHgUsXo/3EihQLHr
+6tHMnbNePkp56x6Aqj3xMOmoWaB/9tU5qJ6hyXLmmIfbbBvD7Uwea5/8zR2LpdNz
+F78mTM+2ozHOdYrMg1johcLHOmqPQPyEhIj/L3jOq0xA4JyZSDlEz6AHX7hVDWRR
+/MrU7BewFrHhFxcwbTr/WT3/74MOW85ADw0dsKdiIZnMyMLQV563iEDz88Bggu6/
+bgCqu6PJc2RWBg6w0TuedxV+aCT1bI/Zd8Rya6ajiAL0PAkYsEDFjyB01kgnYC7J
+x3vVVEzHGZ9egpeLhTWkXB+H8aMQ5AZxQIEsbR4Y+kJS5pEsvwWzuXeFR18jhk/m
+rKV63FZK7Fxv6tdd9KNSTd5XWicZ9opm17I4Gt3OhmTMPRNMIJpZz466mw6+Bfb2
+3vFyv+ti0v3hBHmUN1k9+ttzdX5B1HXqDlkbOUxZ4JKcv0VS2vqUYbLqxK2gIcuo
+JN2ZmwJpQb05I696/GrN0kWiwWBMh+DDCHW6JUgBnsJNERVNkzH6/og81K3fgNSK
+xB2VHjovReiqDSMadMiQeZY5MtBr13BEqCL37gf1oZ77f2xnkkHxFvCU3mAoX9XI
+N/+IM++oHjBiKfV7DD1A0pGsvKjJFS37BBg+EmYmUdHNc+jcOiS6Cy7EqgBFOWKW
+4igNd4eWHyeYMBaYcpW4
+=glKH
 -----END PGP SIGNATURE-----
